# computer-graphics

./: buffer-a.glsl  buffer-b.glsl  image.glsl
lab-1/: buffer-c.glsl
lab-2/: buffer-a.glsl  buffer-b.glsl  buffer-c.glsl  image.glsl
lab-3/: CMakeLists.txt
lab-3/include/: camera.h  geometry.h  model.h  our_gl.h  primitives.h  scene.h  tgaimage.h
lab-3/include/math/: mat.h  matrix.h  vec.h  vector.h
lab-3/include/shaders/: ghost_shader.h  phong_shader.h
lab-3/src/: camera.cpp  main.cpp  model.cpp  our_gl.cpp  primitives.cpp  tgaimage.cpp
lab-4/MetalTutorial/: AppDelegate.swift  Renderer.swift
lab-4/MetalTutorial.xcodeproj/: project.pbxproj
lab-4/MetalTutorial/Base.lproj/: Main.storyboard
lab-5/MetalTextures/: GameViewController.swift  Model.swift  Renderer.swift  Shaders.metal
lab-5/MetalTextures.xcodeproj/: project.pbxproj
lab-5/MetalTextures/Base.lproj/: Main.storyboard
lab-6/MetalTutorial.xcodeproj/: project.pbxproj
lab-6/MetalTutorial/App/: CameraFlyController.swift  GameViewController.swift  Renderer.swift
lab-6/MetalTutorial/App/Components/: ParticleSystem.swift  (+2 more)
lab-6/MetalTutorial/Assets/: Suzanne.usdc
lab-6/MetalTutorial/Core/: Culling.swift  GeometryPrimitives.swift  Math.swift
lab-6/MetalTutorial/Rendering/: GBuffer.swift  RenderingSystem.swift  TextureSetLoader.swift
lab-6/MetalTutorial/Scene/: CubeGeometry.swift  DeferredScene.swift  LODScene.swift  RocketEngineScene.swift  TessellationScene.swift  USDSceneImporter.swift
lab-6/MetalTutorial/Shaders/: DeferredShaders.metal  ParticleShaders.metal  TessellationShaders.metal
(+7 files in other folders)
